--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@react-navigation/native-stack": "^7.6.2",
     "@supabase/supabase-js": "^2.80.0",
     "expo": "~54.0.23",
+    "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
